fix modals being offscreen

--- a/src/styles/components/modal.scss
+++ b/src/styles/components/modal.scss
@@ -55,6 +55,7 @@
 
     &-background {
         position: fixed;
+        top: 0;
         width: 100%;
         height: 100%;
 
